--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/Ivory_cliped.png" />
+    <link rel="icon" href="/Ivory_cliped.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Showcase | Ivory</title>
   </head>
